After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664475 - console: Fix ARGV when using -c to specify program
console: Fix ARGV when using -c to specify program
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2011-11-21 14:16 UTC by Florian Müllner
Modified: 2011-11-21 21:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
console: Fix ARGV when using -c to specify program (1.34 KB, patch)
2011-11-21 14:16 UTC, Florian Müllner
committed Details | Review

Description Florian Müllner 2011-11-21 14:16:20 UTC
See patch.
Comment 1 Florian Müllner 2011-11-21 14:16:24 UTC
Created attachment 201817 [details] [review]
console: Fix ARGV when using -c to specify program

Parameters parsed by GOptionContext are removed from argv, so we
only need to adjust the array ourselves when a filename is specified
(which is parsed manually).
Comment 2 Colin Walters 2011-11-21 19:11:45 UTC
Review of attachment 201817 [details] [review]:

Looks right.
Comment 3 Florian Müllner 2011-11-21 21:38:27 UTC
Attachment 201817 [details] pushed as a5406f3 - console: Fix ARGV when using -c to specify program