console: Fix ARGV when using -c to specify program

Parameters parsed by GOptionContext are removed from argv, so we
only need to adjust the array ourselves when a filename is specified
(which is parsed manually).

https://bugzilla.gnome.org/show_bug.cgi?id=664475